www/css/style.css
/* ... */
    #transDetails-status.Pending {
        color: #3fabe1;
    }

    #transDetails-status.Rejected,
    #transDetails-status.Cancelled,
    #transDetails-status.Canceled,
    #transDetails-status.Disputed {
        color: rgb(169, 68, 66);
    }

#transDetails-date {
    color: #666;
    font-size: 20px;
    font-weight: 400;
    letter-spacing: .5px;
    margin-bottom: 5px;
}

#transDetails-time {
    color: #888;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: .5px;
}

#mapRow {
    position: relative;
}

#mapGeoLabel {
    background-color: rgba(0,0,0,.65);
    bottom: 0px;
    color: #fff;
    font-size: 12px;
    font-weight: 500;
    left: 0px;
    letter-spacing: .5px;
    height: 20px;
    position: absolute;
    text-align: center;
    text-shadow: 0 1px 0 rgba(0,0,0,.8);
    width: 100%;
}

/******************/
/*** STATISTICS ***/
/******************/
.IconGreeen {
    font-size: 40px;
    color: #76C14B;
    margin-right: 50px;
    margin-left: 40px;
}

.IconBasicBlue {
    font-size: 40px;
    color: #11C1F3;
    margin-right: 50px;
}

.statsIconContainer col {
    text-align: center;
}

.statsIconContainer button {
    background-color: lightblue;
    border: none;
    border-radius: 33px;
    color: #fff;
    font-size: 30px;
    display: block;
    margin: 0 auto;
    text-shadow: 0px -1px 0px rgba(0,0,0,.25);
    transition: all .3s;
    height: 66px;
    width: 66px;
}

.statsIconContainer .selected {
    background: #72bf44;
}

.list.icon-right i:before {
    color: #555;
    font-size: 25px;
    position: absolute;
    right: 1px;
    top: 22px;
}

#topFriendsTable .item {
    padding-bottom: 12px;
    padding-top: 12px;
}

#topFriendsTable .item-avatar {
    min-height: 60px;
}

    #topFriendsTable .item-avatar > img:first-child {
        top: 12px;
    }

#statsExportWrap .btn {
    line-height: 1;
}

/**********************/
/***  HOW IT WORKS  ***/
/**********************/
#howItWorksSlider .slide {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 100%;
    width: 100%;
    text-align: center;
    position: absolute;
}

#howItWorksSlider .slideImage {
    display: block;
    max-width: 85%;
    margin: 70px auto 0px;
}

#howItWorksSlider .slideTitle {
    color: #fff;
    font-size: 28px;
    font-weight: 400;
    text-shadow: 0 1px 0px rgba(30,30,30,.5);
}

#howItWorksSlider .slideCaption {
    color: #fff;
    font-size: 18px;
    font-weight: 300;
    line-height: 1.35;
    text-shadow: 0 1px 0px rgba(30,30,30,.5);
    padding: 2px 14px;
}

#howItWorksSlider #slide1 {
    background-image: url("../img/0_home-bg.png");
}

#howItWorksSlider #slide2 {
    background-image: url('../img/1_connectBank_bg.png');
}

#howItWorksSlider #slide3 {
    background-image: url('../img/2_selectRecipient_bg@2x.png');
}

    #howItWorksSlider #slide3 img {
        margin-top: 156px;
    }

#howItWorksSlider #slide4 {
    background-image: url('../img/3_howMuch_bg.png');
}

#howItWorksSlider #slide5 {
    background-image: url('../img/4_history_bg@2x.png');
}

#tourDoneBtn {
    color: #ddd;
    text-decoration: none;
    float: right;
    margin: 40px 16px 0 0;
    padding: 5px 15px;
}


/**************************/
/***  SELECT RECIPIENT  ***/
/**************************/
.emptyTableImg {
    display: block;
    margin: 10px 0;
    width: 100%;
}

#recents-table .item {
    padding: 15px 15px 25px 80px;
}

#recents-table .n-icon {
    position: absolute;
    max-width: 23px;
    right: 15px;
    top: 22px;
}

#recents-table .item-avatar img.userPic {
    border: 1px solid #6D6E71;
    left: 12px;
    max-width: 50px;
    max-height: 50px;
}

.selectRecipList .list {
    border: 0;
    margin-bottom: 0;
    padding-right: 0;
}

.selectRecipList .item .username {
    font-size: 17px;
    font-weight: 600;
}

.selectRecipList .item .usersubtitle {
    color: #777;
    font-size: 15px;
    font-weight: 300;
    width: 90%;
}

#dvSendTo {
    line-height: 1.2;
    text-align: center;
    padding: 5px 10px 10px;
}

    #dvSendTo a {
        display: block;
        text-decoration: none;
    }

    #dvSendTo .sendTo {
        color: #3fabe1;
        display: block;
        font-size: 20px;
        font-weight: 300;
        margin-bottom: 6px;
    }

    #dvSendTo .enteredTxt {
        color: #222;
        display: block;
        font-size: 22px;
        font-weight: 400;
        margin-bottom: 10px;
    }

    #dvSendTo .defaultImg {
        border-radius: 50%;
        width: 80px;
        height: auto;
    }


/******************/
/***  HOW MUCH  ***/
/******************/

#howMuchBox {
    border-radius: 6px;
}

    #howMuchBox .recip-pic {
        border: 1px solid #939598;
        border-radius: 50%;
        height: 76px;
        width: 76px;
    }

.barBackground {
    background-color: #9fa1a4;
    background: linear-gradient(#9fa1a4, #8f9093);
    color: #fff;
    font-size: 17px;
    height: 38px;
    padding: 8px 15px;
}

    .barBackground.green {
        background: linear-gradient(#76c22f, #66aa27);
    }

    .barBackground.blue {
        background: linear-gradient(#40a9de, #3b9cce);
    }

    .barBackground a {
        color: #fff;
        text-decoration: none;
    }

.amount-container {
    overflow: visible;
    padding-right: 5px;
    position: relative;
}

    .amount-container input {
        border: none;
        border-radius: 6px; /*Needed for error styling*/
        color: #58595B;
        font-size: 42px;
        height: 66px;
        padding-right: 8px;
        text-align: right;
        width: 190px;
    }

    .amount-container #dollarSign {
        color: #58595B;
        font-size: 41px;
        position: absolute;
        top: 17px;
        left: 20px;
    }

@media screen and (min-width: 360px) {
    .amount-container input {
        font-size: 45px;
        width: 240px;
    }

    .amount-container #dollarSign {
        font-size: 45px;
    }
}
/* ... */

